[gd_scene load_steps=8 format=2]

[ext_resource path="res://PlayerShip.gd" type="Script" id=1]
[ext_resource path="res://ship.png" type="Texture" id=2]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0, 0.406082, 0.886262, 1, 1, 1, 1, 0.0235294 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.879747, 0.678401 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
lifetime_randomness = 0.23
emission_shape = 2
emission_box_extents = Vector3( 8, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 16.03
flatness = 0.07
gravity = Vector3( 0, 0, 0 )
initial_velocity = 52.99
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 8.0
scale_random = 1.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )
hue_variation = 0.09
hue_variation_random = 0.5

[node name="PlayerShip" type="KinematicBody2D"]
position = Vector2( 512, 300 )
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )
acceleration = 100
turn_rate = 5.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -12.0445, -32.0185, 11.6674, -31.8201, 31.6091, 5.28543, 31.7083, 15.9012, -31.887, 15.802, -31.7878, 5.08701 )

[node name="EngineLeft" type="Particles2D" parent="."]
position = Vector2( -22.2727, 19.8391 )
emitting = false
amount = 50
local_coords = false
process_material = SubResource( 5 )

[node name="EngineRight" type="Particles2D" parent="."]
position = Vector2( 22.9683, 19.2438 )
emitting = false
amount = 30
local_coords = false
process_material = SubResource( 5 )

[node name="LeftShot" type="Node2D" parent="."]
position = Vector2( -20, -32 )

[node name="RightShot" type="Node2D" parent="."]
position = Vector2( 20, -32 )
